--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.75.5",
     "axios": "^1.10.0",
